@@ -1,3 +1,3 @@
 use 5.006;
-use Module::Build::Tiny 0.024;
+use Module::Build::Tiny 0.026;
 Build_PL();
