@@ -4,7 +4,7 @@
       "Adam Stokes L<adamjs@cpan.org>"
    ],
    "dynamic_config" : 0,
-   "generated_by" : "Dist::Milla version v1.0.2, Dist::Zilla version 4.300035, CPAN::Meta::Converter version 2.120921",
+   "generated_by" : "Dist::Milla version v1.0.4, Dist::Zilla version 4.300037, CPAN::Meta::Converter version 2.120921",
    "license" : [
       "perl_5"
    ],
@@ -33,7 +33,7 @@
       },
       "configure" : {
          "requires" : {
-            "Module::Build::Tiny" : "0.024"
+            "Module::Build::Tiny" : "0.026"
          }
       },
       "develop" : {
@@ -43,8 +43,7 @@
       },
       "runtime" : {
          "requires" : {
-            "Mojo::Base" : "0",
-            "strictures" : "1"
+            "Mojo::Base" : "0"
          }
       }
    },
@@ -60,6 +59,9 @@
          "web" : "https://github.com/battlemidget/Mojolicious-Plugin-Disqus-Tiny"
       }
    },
-   "version" : "1.000"
+   "version" : "1.001",
+   "x_contributors" : [
+      "Adam Stokes <adam.stokes@ubuntu.com>"
+   ]
 }
 
