@@ -1,5 +1,4 @@
 requires 'Mojo::Base';
-requires 'strictures', '1';
 
 on build => sub {
     requires 'Mojolicious::Lite';
